styling and color scheme

--- a/index.html
+++ b/index.html
@@ -12,14 +12,38 @@
 
     </head>
     <body>
-        <header id-"LinkedLists">
+        <header id="linkedlists">
         <h1> Welcome To Linked Lists</h1>
         <p> Lorem ipsum dolor sit amet, reque insolens intellegebat qui in, antiopam appellantur eos ea nullam. </p>
         <a href="#" class="button"> Read More</a>
-        
-        
         </header>
+        <section id="section-a">
+        <p>
+        Lorem ipsum dolor sit amet, alia denique voluptatibus ius an, cibo falli ludus cum ad. 
+        Id has tale elitr tempor, ferri intellegam ne vis, an congue convenire vix. Est ea reque
+         constituto, mei cu ceteros aliquando, graece conceptam persequeris per ei. Summo accusamus
+          consequuntur et sed, te docendi nominavi sed, feugiat ornatus habemus ex pro. Mutat reque 
+          tritani nam cu.
+        Mei at phaedrum rationibus accommodare, petentium necessitatibus mea in. Eu alia facer 
+        fastidii sit, errem oblique ei eos, mei at prompta eleifend. Sed possim probatus ad. Nam 
+        dicit tacimates voluptaria ex, cu quidam delectus sea. Ei atqui tibique eam.
+        </p>
 
+        </section>
+        <section id="section-b">
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit minus impedit maxime, quae soluta quis cumque perferendis! Doloribus quaerat, placeat iste facere, aspernatur ex cum veritatis laudantium, officia, non porro exercitationem incidunt quis dolore? Officia ex accusamus expedita optio, voluptatem minus? In maiores omnis aperiam earum ab molestiae beatae laborum blanditiis incidunt, delectus dolor, id voluptates optio aspernatur aliquam saepe atque labore? Tempore reprehenderit ab ipsam perspiciatis ut, provident perferendis sapiente in numquam blanditiis, enim, illo error nulla incidunt quos quidem ratione repellat ipsa molestias veritatis? Mollitia, fugit dolore commodi porro repudiandae atque, eos, ipsum quam culpa fuga deleniti quae.</p>
+        </section>
+        <section id="section-c">
+            <div class="box-1">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
+            </div>
+            <div class="box-2">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
+            </div>
+            <div class="box-3">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
+            </div>
+        </section>
 
         <script src="" async defer></script>
     </body>
