--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <header id="linkedlists">
         <h1> Welcome To Linked Lists</h1>
         <p> Lorem ipsum dolor sit amet, reque insolens intellegebat qui in, antiopam appellantur eos ea nullam. </p>
-        {% comment %} <a href="#" class="button"> Read More</a> {% endcomment %}
-        <button onclick="bottomFunction()" class="button id="myBtn" title="Read More"> Read More</button>
+        <a href="#middle" class="button"> Read More</a>
+        
         </header>
         <section id="section-a">
         <p>
