--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header id="linkedlists">
         <h1> Welcome To Linked Lists</h1>
         <p> Lorem ipsum dolor sit amet, reque insolens intellegebat qui in, antiopam appellantur eos ea nullam. </p>
-        <a href="#middle" class="button"> Read More</a>
+        <a href="#section-a" class="button"> Read More</a>
         
         </header>
         <section id="section-a">
