--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
-        <meta name="description" content="">
+        <meta name="Linked Lists" content="Linked Lists">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Linked Lists</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" type="image/jpg" href="img/icon.png"/>
 
     </head>
     <body>
@@ -16,6 +17,7 @@
         <h1> Welcome To Linked Lists</h1>
         <p> Lorem ipsum dolor sit amet, reque insolens intellegebat qui in, antiopam appellantur eos ea nullam. </p>
         <a href="#section-a" class="button"> Read More</a>
+
         
         </header>
         <section id="section-a">
