--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Linked Lists</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/jpg" href="img/icon.png"/>
+        <link rel="shortcut icon" type="image/png" href="img/icon.png"/>
 
     </head>
     <body>
