--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header id="linkedlists">
         <h1> Welcome To Linked Lists</h1>
-        <p> Lorem ipsum dolor sit amet, reque insolens intellegebat qui in, antiopam appellantur eos ea nullam. </p>
+        <p> We help immersive grads save money, upskill, and get a job. </p>
         <a href="#section-a" class="button"> Read More</a>
 
         
