--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
         </section>
         <section id="section-c">
             <div class="box-1">
+            <h3>Save Money</h3>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
             </div>
             <div class="box-2">
+            <h3>Upskill</h3>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
             </div>
             <div class="box-3">
+            <h3> Get A Job</h3>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
             </div>
         </section>
