--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header id="linkedlists">
         <h1> Welcome To Linked Lists</h1>
-        <p> We help immersive grads save money, upskill, and get a job. </p>
+        <p> SAVE-MONEY_UP-SKILL_GET-A-JOB</p>
         <a href="#section-a" class="button"> Read More</a>
 
         
