--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
             </div>
             <div class="box-3">
-            <h3> Get A Job</h3>
+            <div> <bold>Get A Job</bold></div>
+            <br>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
             </div>
         </section>
