--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit minus impedit maxime, quae soluta quis cumque perferendis! Doloribus quaerat, placeat iste facere, aspernatur ex cum veritatis laudantium, officia, non porro exercitationem incidunt quis dolore? Officia ex accusamus expedita optio, voluptatem minus? In maiores omnis aperiam earum ab molestiae beatae laborum blanditiis incidunt, delectus dolor, id voluptates optio aspernatur aliquam saepe atque labore? Tempore reprehenderit ab ipsam perspiciatis ut, provident perferendis sapiente in numquam blanditiis, enim, illo error nulla incidunt quos quidem ratione repellat ipsa molestias veritatis? Mollitia, fugit dolore commodi porro repudiandae atque, eos, ipsum quam culpa fuga deleniti quae.</p>
         </section>
         <section id="section-c">
+            <h3 class="center" >Save_Money</h3>
             <div class="box-1">
-            <h3 class="center" >Save Money</h3>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
+              Refinance your student loan or buy out your ISA to save hundreds of dollars a month, and learn how to make the most of your new and improved salary in the tech field.
             </div>
             <div class="box-2">
-            <h3 class="center" >Upskill</h3>
+            <h3 class="center" >Up_skill</h3>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
             </div>
             <div class="box-3">
-            <h3 class="center" > Get A Job</h3>
+            <h3 class="center" > Get_A_ Job</h3>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
             </div>
         </section>
