--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header id="linkedlists">
         <h1> Welcome_To_Linked_Lists</h1>
-        <p> SAVE-MONEY_UP-SKILL_GET-A-JOB</p>
+        <p> SAVE_MONEY | UP_SKILL | GET_A_JOB</p>
         <a href="#section-a" class="button"> Read More</a>
 
         
