--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header id="linkedlists">
-        <h1> Welcome_To_Linked_Lists</h1>
+        <h1> Welcome To Linked_Lists</h1>
         <p> SAVE_MONEY | UP_SKILL | GET_A_JOB</p>
         <a href="#section-a" class="button"> Read More</a>
 
