--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="box-3">
             <h3 class="center" > Get_A_ Job</h3>
-            Get the training you need to successfully navigate behavioral and technical intervies as well as the career coaching to help you focus on what is important for your career.
+            Get the help you need to successfully navigate behavioral and technical intervies as well as the career coaching to help you focus on what is important for your career.
             </div>
         </section>
 
