--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div>
             <div class="box-2">
             <h3 class="center" >Up_skill</h3>
-              Get ongoing training in the area you have chosen to focus on in your new career, from React, Python, and styling to Express, Django, and APIs to mobile apps, using block chain to make dapps we will help you get there.
+              Get ongoing training in the area you have chosen to focus on in your new career, from React, Python, and styling to Express, Django, and APIs to making Googls or IOS mobile apps, or using block chain to make dapps we will help you get there.
             </div>
             <div class="box-3">
             <h3 class="center" > Get_A_ Job</h3>
-            Get the help you need to successfully navigate behavioral and technical intervies as well as the career coaching to help you focus on what is important for your career.
+            Get the help you need to successfully navigate behavioral and technical interviews as well as the career coaching to help you focus on what is important for your career.
             </div>
         </section>
 
