--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
         </header>
         <section id="section-a">
         <p>
-        Lorem ipsum dolor sit amet, alia denique voluptatibus ius an, cibo falli ludus cum ad. 
-        Id has tale elitr tempor, ferri intellegam ne vis, an congue convenire vix. Est ea reque
-         constituto, mei cu ceteros aliquando, graece conceptam persequeris per ei. Summo accusamus
-          consequuntur et sed, te docendi nominavi sed, feugiat ornatus habemus ex pro. Mutat reque 
-          tritani nam cu.
-        Mei at phaedrum rationibus accommodare, petentium necessitatibus mea in. Eu alia facer 
-        fastidii sit, errem oblique ei eos, mei at prompta eleifend. Sed possim probatus ad. Nam 
-        dicit tacimates voluptaria ex, cu quidam delectus sea. Ei atqui tibique eam.
+        People are important. With each person we help in finance, skill development, and/or career development we make a positive impact on our world. So, you’ve finished your immersive, having spent 3 to 4 months in a highly structured, amazingly intense, firehose of information environment where all you could think about was this lesson, this project, or this lab. Now, with all that structure gone, what do you do? That’s where Linked_Lists comes in. We have ongoing daily sessions to help you with continuing your journey with our Upskill classes, Career Coaching workshops, and financial help seminars. You are not alone. YOU ARE IMPORTANT!
         </p>
 
         </section>
@@ -43,7 +36,7 @@
             </div>
             <div class="box-2">
             <h3 class="center" >Up_skill</h3>
-              Get ongoing training in the area you have chosen to focus on in your new career, from React, Python, and styling to Express, Django, and APIs to making Googls or IOS mobile apps, or using block chain to make dapps we will help you get there.
+              Get ongoing training in the area you have chosen to focus on, from React, Python, and styling to Express, Django, and APIs to making Googls or IOS mobile apps, or using block chain to make dapps. We will help you get there.
             </div>
             <div class="box-3">
             <h3 class="center" > Get_A_ Job</h3>
