--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         </header>
         <section id="section-a">
         <p>
-        People are important. With each person we help in finance, skill development, and/or career development we make a positive impact on our world. So, you’ve finished your immersive, having spent 3 to 4 months in a highly structured, amazingly intense, firehose of information environment where all you could think about was this lesson, this project, or this lab. Now, with all that structure gone, what do you do? That’s where Linked_Lists comes in. We have ongoing daily sessions to help you with continuing your journey with our Upskill classes, Career Coaching workshops, and financial help seminars. You are not alone.
+        People are important.
+        </p>
+        <p>
+        With each person we help in finance, skill development, and/or career development we make a positive impact on our world. So, you’ve finished your immersive, having spent 3 to 4 months in a highly structured, amazingly intense, firehose of information environment where all you could think about was this lesson, this project, or this lab. Now, with all that structure gone, what do you do? That’s where Linked_Lists comes in. We have ongoing daily sessions to help you with continuing your journey with our Upskill classes, Career Coaching workshops, and financial help seminars. You are not alone.
         </p>
         <p>
         YOU ARE IMPORTANT!
