--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <title></title>
         <meta name="Linked Lists" content="Linked Lists">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="Linked_Lists">
+        <meta property="og:description" content="Ongoing Support for Immersive Post-Grads">
+        <meta property="og:image" content="img/cohort.jpg">
+        <meta property="og:url" content="http://linkedlists.io">
         <title>Linked Lists</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/icon.png"/>
