--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
         </section>
         <section id="section-b">
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit minus impedit maxime, quae soluta quis cumque perferendis! Doloribus quaerat, placeat iste facere, aspernatur ex cum veritatis laudantium, officia, non porro exercitationem incidunt quis dolore? Officia ex accusamus expedita optio, voluptatem minus? In maiores omnis aperiam earum ab molestiae beatae laborum blanditiis incidunt, delectus dolor, id voluptates optio aspernatur aliquam saepe atque labore? Tempore reprehenderit ab ipsam perspiciatis ut, provident perferendis sapiente in numquam blanditiis, enim, illo error nulla incidunt quos quidem ratione repellat ipsa molestias veritatis? Mollitia, fugit dolore commodi porro repudiandae atque, eos, ipsum quam culpa fuga deleniti quae.</p>
+             <p>Keep a structured environment.</p>
+             <p>Pop into an ongoing weekly two-hour class with each day of the week focusing on a specific type of coding. Attend a daily workshop on finance; learn how to deal with a lot more money than you are used to having for an ongoing financially successful life. Enroll in career counseling and learn all the options that are available for you to live your dreams.</p>
+             <p>Keep Your Focus!</p>
         </section>
         <section id="section-c">
             <div class="box-1">
