--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         
         </header>
         <section id="section-a">
-        <p>
-        People are important.
-        </p>
-        <p>
-        With each person we help in finance, skill development, and/or career development we make a positive impact on our world. So, you’ve finished your immersive, having spent 3 to 4 months in a highly structured, amazingly intense, firehose of information environment where all you could think about was this lesson, this project, or this lab. Now, with all that structure gone, what do you do? That’s where Linked_Lists comes in. We have ongoing daily sessions to help you with continuing your journey with our Upskill classes, Career Coaching workshops, and financial help seminars. You are not alone.
-        </p>
-        <p>
-        YOU ARE IMPORTANT!
-        </p>
+            <p>
+            People are important.
+            </p>
+            <p>
+            With each person we help in finance, skill development, and/or career development we make a positive impact on our world. So, you’ve finished your immersive, having spent 3 to 4 months in a highly structured, amazingly intense, firehose of information environment where all you could think about was this lesson, this project, or this lab. Now, with all that structure gone, what do you do? That’s where Linked_Lists comes in. We have ongoing daily sessions to help you with continuing your journey with our Upskill classes, Career Coaching workshops, and financial help seminars. You are not alone.
+            </p>
+            <p>
+            YOU ARE IMPORTANT!
+            </p>
 
         </section>
         <section id="section-b">
@@ -47,11 +47,11 @@
               Refinance your student loan or buy out your ISA to save hundreds of dollars a month, and learn how to make the most of your new and improved salary in the tech field.
             </div>
             <div class="box-2">
-            <h3 class="center" >Up_skill</h3>
+            <h3 class="center" >Up_Skill</h3>
               Get ongoing training in the area you have chosen to focus on, from React, Python, and styling to Express, Django, and APIs to making Googls or IOS mobile apps, or using block chain to make dapps. We will help you get there.
             </div>
             <div class="box-3">
-            <h3 class="center" > Get_A_ Job</h3>
+            <h3 class="center" > Get_A_Job</h3>
             Get the help you need to successfully navigate behavioral and technical interviews as well as the career coaching to help you focus on what is important for your career.
             </div>
         </section>
