--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="section-b">
              <p>Keep a structured environment.</p>
              <p>Pop into an ongoing weekly two-hour class with each day of the week focusing on a specific type of coding. Attend a daily workshop on finance; learn how to deal with a lot more money than you are used to having for an ongoing financially successful life. Enroll in career counseling and learn all the options that are available for you to live your dreams.</p>
-             <p>Keep Your Focus!</p>
+             <p>KEEP YOUR FOCUS!</p>
         </section>
         <section id="section-c">
             <div class="box-1">
