--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <p>
             YOU ARE IMPORTANT!
             </p>
+            <p>
+            Have some questions? E-mail us at; contact@linkedlists.io
+            </p>
 
         </section>
         <section id="section-b">
